--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
         <h1 class="location-timezone">TimeZone</h1>
         <p>Icon</p>
     </div>
+
     <div class="temperature">
+        <div class= "temp-cf">
         <h2 class="temp-degree">36</h2>
-        <div class="temp-description"> cold</div>
+        <span>F</span>
+        </div>
+        <div class="temp-description"> cold
     </div>
 
 
